--- a/client-app/package.json
+++ b/client-app/package.json
@@ -16,11 +16,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^3.0.0-beta.0"
+    "semantic-ui-react": "^3.0.0-beta.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.1",
+    "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
