--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@testing-library/react": "^11.2.2",
     "axios": "^1.5.1",
+    "mobx": "^6.11.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "semantic-ui-css": "^2.5.0",
