--- a/client-app/package.json
+++ b/client-app/package.json
@@ -17,6 +17,7 @@
     "mobx-react-lite": "^4.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.20.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.0",
     "uuid": "^9.0.1"
