--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@testing-library/react": "^11.2.2",
+    "@types/react-calendar": "^4.1.0",
     "axios": "^1.5.1",
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^17.0.2",
+    "react-calendar": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.20.1",
     "semantic-ui-css": "^2.5.0",
