--- a/client-app/package.json
+++ b/client-app/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^9.1.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.0",
     "uuid": "^9.0.1"
