--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,21 +14,27 @@
     "@testing-library/react": "^11.2.2",
     "@types/react-calendar": "^4.1.0",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
+    "formik": "^2.4.5",
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^17.0.2",
     "react-calendar": "^4.7.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.1",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^17.0.1",
     "@types/uuid": "^9.0.6",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
